@@ -27,6 +27,25 @@ setMethod("show", signature(object = "codeml"),
               print_fields(object, len=4)
           })
 
+##' @rdname show-methods
+##' @exportMethod show
+setMethod("show", signature(object = "codeml_mlc"),
+          function(object) {
+              cat("'codeml_mlc' S4 object that stored information of\n\t",
+                  paste0("'", object@mlcfile, "'."),
+                  "\n\n")
+              
+              cat("...@ tree:")
+              print.phylo(get.tree(object))                  
+              
+              cat("\nwith the following features available:\n")
+              cat("\t", paste0("'",
+                                 paste(get.fields(object), collapse="',\t'"),
+                                 "'."),
+                  "\n")
+          }
+          )
+
 ##' show method for \code{jplace} instance
 ##'
 ##' 
@@ -94,3 +113,48 @@ setMethod("show", signature(object = "phylip"),
               cat(msg)
           })
 
+##' @rdname show-methods
+##' @exportMethod show
+setMethod("show", signature(object = "paml_rst"),
+          function(object) {
+              cat("'paml_rst' S4 object that stored information of\n\t",
+                  paste0("'", object@rstfile, "'.\n\n"))
+              ## if (length(object@tip.fasfile) != 0) {
+              ##     cat(paste0(" and \n\t'", object@tip.fasfile, "'.\n\n"))
+              ## } else {
+              ##     cat(".\n\n")
+              ## }
+              fields <- get.fields(object)
+
+              if (nrow(object@marginal_subs) == 0) {
+                  fields <- fields[fields != "marginal_subs"]
+                  fields <- fields[fields != "marginal_AA_subs"]
+              }
+              if (nrow(object@joint_subs) == 0) {
+                  fields <- fields[fields != "joint_subs"]
+                  fields <- fields[fields != "joint_AA_subs"]
+              }
+              
+              cat("...@ tree:")
+              print.phylo(get.tree(object))                  
+              cat("\nwith the following features available:\n")
+              cat("\t", paste0("'",
+                               paste(fields, collapse="',\t'"),
+                               "'."),
+                  "\n")
+          })
+
+
+
+##' @rdname show-methods
+##' @importFrom ape print.phylo
+##' @exportMethod show
+setMethod("show", signature(object = "r8s"),
+          function(object) {
+              cat("'r8s' S4 object that stored information of\n\t",
+                  paste0("'", object@file, "'.\n\n"))
+              cat("...@ tree: ")
+              print.phylo(get.tree(object))                  
+              ## cat("\nwith the following features available:\n")
+              ## print_fields(object)
+          })
